// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrganizationInfo > creates snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="position-absolute"
    >
      <div
        class="dropdown-menu dropdown-menu-left text-wrap _dropdown_9229df"
        role="complementary"
      />
    </div>
    <div
      class="d-flex flex-row align-items-baseline text-truncate"
    >
      <button
        aria-expanded="false"
        aria-hidden="true"
        aria-label="Organization info"
        class="p-0 border-0 text-muted text-truncate flex-grow-1 bg-transparent position-relative _link_9229df undefined"
        tabindex="-1"
      >
        <div
          class="d-flex flex-row align-items-baseline"
        >
          <div
            class="text-truncate"
          >
            orgname
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OrganizationInfo creates snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="position-absolute"
    >
      <div
        class="dropdown-menu dropdown-menu-left text-wrap dropdown"
        role="complementary"
      />
    </div>
    <div
      class="d-flex flex-row align-items-baseline text-truncate"
    >
      <button
        aria-expanded="false"
        aria-hidden="true"
        aria-label="Organization info"
        class="p-0 border-0 text-muted text-truncate flex-grow-1 bg-transparent position-relative link undefined"
        tabindex="-1"
      >
        <div
          class="d-flex flex-row align-items-baseline"
        >
          <div
            class="text-truncate"
          >
            orgname
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
